--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,14 @@
         "jdavidbakr/mail-tracker": "^7.15",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^4.3",
+        "laravel/octane": "^2.3",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "*",
         "spatie/laravel-permission": "^6.4",
+        "spiral/roadrunner-cli": "^2.6.0",
+        "spiral/roadrunner-http": "^3.3.0",
         "wireui/wireui": "^1.18"
     },
     "require-dev": {
