--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
+# LOG_CHANNEL=stack-telegram
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
@@ -57,3 +58,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# TELEGRAM_LOGGER_BOT_TOKEN=
+# TELEGRAM_LOGGER_CHAT_ID=
+# TELEGRAM_LOGGER_TEMPLATE=laravel-telegram-logging::minimal
