--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "*",
+        "opcodesio/log-viewer": "^3.8",
         "plesk/ext-laravel-integration": "^7.0",
         "rawilk/laravel-settings": "^3.3",
         "spatie/laravel-permission": "^6.4",
